* Added action=emailuser to send an email to a user
* (bug 14471) Use HTMLTidy and generate limit report in action=parse
* (bug 14459) Added prependtext and appendtext parameters to action=edit
* (bug 14526) Unescaped SQL in list=backlinks
* Added 'hidden' flag to list=allcategories and prop=categoryinfo output
* Added nocreate parameter to action=edit

=== Languages updated in 1.13 ===

MediaWiki supports over 300 languages. Many localisations are updated
regularly. Below only new and removed languages are listed.

* Egyptian Spoken Arabic (arz) (new)
* Southern Balochi (bcc) (new)
* Middle Dutch (dum) (removed)
* British English (en-gb) (new)
* Fiji Hindi (Latin) (hif-latn) (new)
* Old Norse (non) (removed)
* Serbian cyrillic iyekvian (sr-jc) (removed)
* Serbian latin iyekavian (sr-jl) (removed)
* Silesian (szl) (new)
* Tajiki (Cyrllic script) (tg-cyrl) (new)
* Tajiki (Latin script) (tg-latn) (new)


== Compatibility ==

MediaWiki 1.13 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.13 has several database changes since 1.12, and will not work without schema
updates.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.

If upgrading from before 1.11, and you are using a wiki as a commons repository,
make sure that it is updated as well. Otherwise, errors may arise due to
database schema changes.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could
break. Don't forget to always back up your database before upgrading!
