@@ -450,6 +450,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 14526) Unescaped SQL in list=backlinks
 * Added 'hidden' flag to list=allcategories and prop=categoryinfo output
 * Added nocreate parameter to action=edit
+* (bug 14402) Added smaxage parameter to api.php
 
 === Languages updated in 1.13 ===
 
